# aurea-orchestrator

./: .bandit.yml  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  Dockerfile  GRAFANA.md  METRICS.md  MVP_STATUS.md  QUICKSTART.md  QUICKSTART_REAL.md  README.md  SDK_README.md  SECURITY.md  SETUP_GEMINI.md  SUMMARY.md  TODO.md  api.py  app.py  budget_service.py  cli.py  config.json  config.py  config_manager.py  database.py  demo.py  demo.sh  demo_statuses.py  docker-compose.yml  email_notifier.py  eslint.config.mjs  example.py  example_usage.py  generate_openapi.py  go.mod  grafana-dashboard.json  jest.config.js  (+37 more)
agents/: __init__.py  architect.py  code.py  review.py  versions.py
app/: __init__.py  auth.py  cache.py  config.py  config_store.py  database.py  main.py  metrics.py  router.py
aurea/: __init__.py  cli.py  evaluator.py  models.py  router.py  tracker.py
aurea_client/: __init__.py
aurea_orchestrator/: __init__.py  agents.py  celery_app.py  config.py  database.py  doc_generator.py  main.py  model_router.py  schemas.py  workflow.py
backend/: main.py
config/: .env.example  autoscale.yml  notifications.json  settings.py
dashboard/: Dockerfile  package-lock.json  package.json
docs/: GDPR_COMPLIANCE.md  SOC2_COMPLIANCE.md
examples/: advanced_usage.py  agent-workflow.ts  authentication.py  basic-usage.ts  basic_usage.py  benchmark_example.py  code_review_template.yaml  data_analysis_template.yaml  direct-integrations.ts  example_curl.sh  example_usage.py  greeting_template.yaml  run_benchmarks.sh
grafana/: README.md  dashboard.json
k8s/: EXAMPLES.md  QUICKSTART.md  README.md
orchestrator/: __init__.py  main.py
src/: __init__.py  app.py  example.ts  export.py  index.ts  main.py  models.py  storage.py
templates/: billing_summary.html  dashboard.html
(+184 files in other folders)
